--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>TNTC</title>
-    <meta name="description" content="TNTC">
-    <script src="./bundle.js"></script>
-    <link type="text/css" href="style.css">
-</head>
-
-<body>
-    <div id="header"></div>
-    <a-scene fog="type: linear; color: #fff" vr-mode-ui="enabled: false" id="scene">
-        <a-assets>
-            <img id="picker-img" src="assets/images/picker.png" />
-        </a-assets>
-
-        <a-sky color="#f2f2f2"></a-sky>
-        <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#f2f2f2"></a-plane>
-
-        <!-- <a-room id="room0">
-            <a-entity id="gram" obj-model="obj: #gram-obj; mtl: #gram-mtl" position="-.9 1 .7" scale=".5 .5 .5" rotation="0 90 0" sound="src: url(assets/audio/makin-whoopiee.mp3); autoplay: false; volume: 0.1"></a-entity>
-            <a-shelf id="shelf" position="0 0 -1" scale="1.2 1.2 1.2"></a-shelf>
-            <a-entity id="table" obj-model="obj: #table-obj; mtl: #table-mtl" position="-.9 0 .7"></a-entity>
-        </a-room> -->
-
-        <a-entity position="0 0 0">
-            <a-camera></a-camera>
-        </a-entity>
-    </a-scene>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>TNTC</title><link href="/static/css/main.7a986337.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(l){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],f=0,i=[];f<n.length;f++)t=n[f],p[t]&&i.push(p[t][0]),p[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(l[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return c.push.apply(c,u||[]),a()}function a(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==p[u]&&(n=!1)}n&&(c.splice(r--,1),e=f(f.s=t[0]))}return e}var t={},p={2:0},c=[];function f(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return l[e].call(r.exports,r,r.exports,f),r.l=!0,r.exports}f.m=l,f.c=t,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(r,e){if(1&e&&(r=f(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)f.d(t,n,function(e){return r[e]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var r=window.webpackJsonp=window.webpackJsonp||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;a()}([])</script><script src="/static/js/1.3cc65558.chunk.js"></script><script src="/static/js/main.87e69e16.chunk.js"></script></body></html>
