--- a/three/index.html
+++ b/three/index.html
@@ -120,7 +120,7 @@
 				// model
 				var loader = new THREE.FBXLoader();
 
-				loader.load( 'car.FBX', function ( object ) {
+				loader.load( 'car.fbx', function ( object ) {
 					object.traverse( function ( child ) {
 						if ( child.isMesh ) {
 
