--- a/arjs/index.html
+++ b/arjs/index.html
@@ -11,7 +11,7 @@
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker23.patt'>
-			<a-obj-model src="#towers-obj" mtl="#towers-mtl" rotation="90 0 0" scale="0.1 0.1 0.1"></a-obj-model>
+			<a-obj-model src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1"></a-obj-model>
 			<!-- <a-box position='0 0.5 0' material='color: yellow;'></a-box> -->
 		</a-marker>
 
