--- a/arjs/index.html
+++ b/arjs/index.html
@@ -4,7 +4,7 @@
 <script src="https://raw.githack.com/jeromeetienne/AR.js/1.7.1/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs>
+	<a-scene embedded arjs="debugUIEnabled: false;">
 		<a-assets>
 			<a-asset-item id="towers-obj" src="models/TorriMedie.obj"></a-asset-item>
 			<a-asset-item id="towers-mtl" src="models/TorriMedie.mtl"></a-asset-item>
