--- a/arjs/index.html
+++ b/arjs/index.html
@@ -8,10 +8,12 @@
 		<a-assets>
 			<a-asset-item id="towers-obj" src="models/TorriMedie.obj"></a-asset-item>
 			<a-asset-item id="towers-mtl" src="models/TorriMedie.mtl"></a-asset-item>
+			<a-asset-item id="book" src="models/book.gltf"></a-asset-item>
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker23.patt'>
-			<a-obj-model src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1"></a-obj-model>
+			<!-- <a-obj-model src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1"></a-obj-model> -->
+			<a-entity gltf-model=”#book” scale="0.1 0.1 0.1"> </a-entity>
 			<!-- <a-box position='0 0.5 0' material='color: yellow;'></a-box> -->
 		</a-marker>
 
