--- a/arjs/index.html
+++ b/arjs/index.html
@@ -13,7 +13,7 @@
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker23.patt'>
 			<!-- <a-obj-model src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1"></a-obj-model> -->
-			<a-entity gltf-model=”#book” scale="0.1 0.1 0.1"> </a-entity>
+			<a-entity gltf-model="#book" scale="0.1 0.1 0.1"> </a-entity>
 			<!-- <a-box position='0 0.5 0' material='color: yellow;'></a-box> -->
 		</a-marker>
 
