--- a/arjs/index.html
+++ b/arjs/index.html
@@ -2,23 +2,122 @@
 <html>
 <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
 <script src="https://raw.githack.com/jeromeetienne/AR.js/1.7.1/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs="debugUIEnabled: false;" vr-mode-ui="enabled: false">
+
 		<a-assets>
-			<a-asset-item id="towers-obj" src="models/TorriMedie.obj"></a-asset-item>
-			<a-asset-item id="towers-mtl" src="models/TorriMedie.mtl"></a-asset-item>
-			<a-asset-item id="book" src="models/book.gltf"></a-asset-item>
+			<a-asset-item id="towers-obj" src="./models/towers/TorriMedie.obj"></a-asset-item>
+			<a-asset-item id="towers-mtl" src="./models/towers/TorriMedie.mtl"></a-asset-item>
+
+			<a-asset-item id="book" src="./models/book/book.gltf"></a-asset-item>
+
+			<a-asset-item id="cloud01-obj" src="./models/clouds/Cloud1.obj"></a-asset-item>
+			<a-asset-item id="cloud01-mtl" src="./models/clouds/Cloud1.mtl"></a-asset-item>
+			<a-asset-item id="cloud02-obj" src="./models/clouds/Cloud2.obj"></a-asset-item>
+			<a-asset-item id="cloud02-mtl" src="./models/clouds/Cloud2.mtl"></a-asset-item>
+			<a-asset-item id="cloud03-obj" src="./models/clouds/Cloud3.obj"></a-asset-item>
+			<a-asset-item id="cloud03-mtl" src="./models/clouds/Cloud3.mtl"></a-asset-item>
+
+			<a-asset-item id="nutty-obj" src="./models/nutty/nutty.obj"></a-asset-item>
+			<a-asset-item id="nutty-mtl" src="./models/nutty/nutty.mtl"></a-asset-item>
+
+			<img id="imgAR" src="./images/ar.png" alt=""></img>
+			<img id="imgVR" src="./images/vr.png" alt=""></img>
+			<img id="img3D" src="./images/3d.png" alt=""></img>
+			<img id="imgGames" src="./images/games.png" alt=""></img>
+			
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker23.patt'>
-			<!-- <a-obj-model src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1"></a-obj-model> -->
-			<a-entity gltf-model="#book" scale="0.1 0.1 0.1"> </a-entity>
-			<!-- <a-box position='0 0.5 0' material='color: yellow;'></a-box> -->
+			<a-entity id="redBook" gltf-model="#book" scale="0.1 0.1 0.1" animation-mixer="clip: Idle; "> </a-entity>
+
+			<a-obj-model id="towers" src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1" visible="false" position="0 0 0"></a-obj-model>
+			<a-obj-model id="cloud01" src="#cloud01-obj" mtl="#cloud01-mtl" scale="0.05 0.05 0.05" visible="false" position="-0.3 0.7 -2"></a-obj-model>
+			<a-obj-model id="cloud02" src="#cloud02-obj" mtl="#cloud02-mtl" scale="0.04 0.03 0.02" visible="false" position="0.7 2 0"></a-obj-model>
+			<a-obj-model id="cloud03" src="#cloud03-obj" mtl="#cloud03-mtl" scale="0.08 0.05 0.05" visible="false" position="-0.5 1.5 -0.5"></a-obj-model>
+			<a-obj-model id="nutty" src="#nutty-obj" mtl="#nutty-mtl" scale="1 1 1" visible="false"position="-2 0.2 0" rotation="0 -45 0" ></a-obj-model>
+
+			<a-image id="ar" src="#imgAR" position="1.3 0 0.2" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
+			<a-image id="vr" src="#imgVR" position="-2 2 -0.3" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
+			<a-image id="ddd" src="#img3D" position="-3 0.1 0.5" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
+			<a-image id="games" src="#imgGames" position="-0.2 -0.1 1.2" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
 		</a-marker>
 
+		<!-- <a-camera><a-cursor></a-cursor></a-camera> -->
 		<a-entity camera></a-entity>
 	</a-scene>
+
+	<script type="text/javascript">
+
+		let marker = document.querySelector("a-marker")
+
+		let redBook = document.querySelector("#redBook")
+		let towers = document.querySelector('#towers')
+		let cloud01 = document.querySelector('#cloud01')
+		let cloud02 = document.querySelector('#cloud02')
+		let cloud03 = document.querySelector('#cloud03')
+		let ar = document.querySelector("#ar")
+		let vr = document.querySelector("#vr")
+		let ddd = document.querySelector("#ddd")
+		let games = document.querySelector("#games")
+		let nutty = document.querySelector("#nutty")
+
+
+		marker.addEventListener('markerFound', function(evt){
+			setTimeout(function(evt){
+				redBook.setAttribute('animation-mixer', "clip: open; loop: once; duration: 1;")
+			}, 1000)
+		})
+
+		redBook.addEventListener('animation-finished', function(evt){
+			
+			towers.setAttribute('visible', true);
+			towers.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.1 0.1 0.1; dur: 1500; easing: linear")
+
+			setTimeout(function(evt){
+			cloud01.setAttribute('visible', true);
+			cloud01.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.05 0.05 0.05; dur: 1500; easing: linear")
+			}, 400)
+
+			setTimeout(function(evt){
+				cloud02.setAttribute('visible', true);
+				cloud02.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.05 0.03 0.05; dur: 1500; easing: linear")
+			}, 300)
+			
+			setTimeout(function(evt){
+				cloud03.setAttribute('visible', true);
+				cloud03.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.08 0.05 0.05; dur: 1500; easing: linear")
+			}, 100)
+
+			setTimeout(function(evt){
+				ar.setAttribute('visible', true);
+				ar.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+			}, 200)
+
+			setTimeout(function(evt){
+				vr.setAttribute('visible', true);
+				vr.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+			}, 300)
+
+			setTimeout(function(evt){
+				ddd.setAttribute('visible', true);
+				ddd.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+			}, 400)
+
+			setTimeout(function(evt){
+				games.setAttribute('visible', true);
+				games.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+			}, 300)
+
+			setTimeout(function(evt){
+				nutty.setAttribute('visible', true);
+				nutty.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+			}, 100)
+		})
+
+	</script>
 </body>
 
 </html>
