--- a/arjs/index.html
+++ b/arjs/index.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs="debugUIEnabled: false;" vr-mode-ui="enabled: false">
+	<a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
 
 		<a-assets>
 			<a-asset-item id="towers-obj" src="./models/towers/TorriMedie.obj"></a-asset-item>
