--- a/arjs/index.html
+++ b/arjs/index.html
@@ -12,6 +12,7 @@
 			<a-asset-item id="towers-mtl" src="./models/towers/TorriMedie.mtl"></a-asset-item>
 
 			<a-asset-item id="book" src="./models/book/book.gltf"></a-asset-item>
+			<a-asset-item id="book-obj" src="./models/book/LibroTNTC.obj"></a-asset-item>
 
 			<a-asset-item id="cloud01-obj" src="./models/clouds/Cloud1.obj"></a-asset-item>
 			<a-asset-item id="cloud01-mtl" src="./models/clouds/Cloud1.mtl"></a-asset-item>
@@ -31,7 +32,8 @@
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker23.patt'>
-			<a-entity id="redBook" gltf-model="#book" scale="0.1 0.1 0.1" animation-mixer="clip: Idle; "> </a-entity>
+			<a-obj-model id="tntcBook" src="#book-obj" scale="1 1 1"></a-obj-model>
+			<!-- <a-entity id="redBook" gltf-model="#book" scale="0.1 0.1 0.1" animation-mixer="clip: Idle; "> </a-entity>
 
 			<a-obj-model id="towers" src="#towers-obj" mtl="#towers-mtl" scale="0.1 0.1 0.1" visible="false" position="-0.3 0 0"></a-obj-model>
 			<a-obj-model id="cloud01" src="#cloud01-obj" mtl="#cloud01-mtl" scale="0.05 0.05 0.05" visible="false" position="-0.3 0.7 -2"></a-obj-model>
@@ -42,7 +44,7 @@
 			<a-image id="ar" src="#imgAR" position="1.3 0 0.2" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
 			<a-image id="vr" src="#imgVR" position="-2 2 -0.3" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
 			<a-image id="ddd" src="#img3D" position="-3 0.1 0.5" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
-			<a-image id="games" src="#imgGames" position="-0.2 -0.1 1.2" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image>
+			<a-image id="games" src="#imgGames" position="-0.2 -0.1 1.2" width="1" height="1" alphatest= 'val: 0.5' visible="false"></a-image> -->
 		</a-marker>
 
 		<!-- <a-camera><a-cursor></a-cursor></a-camera> -->
@@ -51,71 +53,71 @@
 
 	<script type="text/javascript">
 
-		let marker = document.querySelector("a-marker")
+		// let marker = document.querySelector("a-marker")
 
-		let redBook = document.querySelector("#redBook")
-		let towers = document.querySelector('#towers')
-		let cloud01 = document.querySelector('#cloud01')
-		let cloud02 = document.querySelector('#cloud02')
-		let cloud03 = document.querySelector('#cloud03')
-		let ar = document.querySelector("#ar")
-		let vr = document.querySelector("#vr")
-		let ddd = document.querySelector("#ddd")
-		let games = document.querySelector("#games")
-		let nutty = document.querySelector("#nutty")
+		// let redBook = document.querySelector("#redBook")
+		// let towers = document.querySelector('#towers')
+		// let cloud01 = document.querySelector('#cloud01')
+		// let cloud02 = document.querySelector('#cloud02')
+		// let cloud03 = document.querySelector('#cloud03')
+		// let ar = document.querySelector("#ar")
+		// let vr = document.querySelector("#vr")
+		// let ddd = document.querySelector("#ddd")
+		// let games = document.querySelector("#games")
+		// let nutty = document.querySelector("#nutty")
 
 
-		marker.addEventListener('markerFound', function(evt){
-			setTimeout(function(evt){
-				redBook.setAttribute('animation-mixer', "clip: open; loop: once; duration: 1;")
-			}, 1000)
-		})
+		// marker.addEventListener('markerFound', function(evt){
+		// 	setTimeout(function(evt){
+		// 		redBook.setAttribute('animation-mixer', "clip: open; loop: once; duration: 1;")
+		// 	}, 1000)
+		// })
 
-		redBook.addEventListener('animation-finished', function(evt){
+		// redBook.addEventListener('animation-finished', function(evt){
 			
-			towers.setAttribute('visible', true);
-			towers.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.1 0.1 0.1; dur: 1500; easing: linear")
+		// 	towers.setAttribute('visible', true);
+		// 	towers.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.1 0.1 0.1; dur: 1500; easing: linear")
 
-			setTimeout(function(evt){
-			cloud01.setAttribute('visible', true);
-			cloud01.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.05 0.05 0.05; dur: 1500; easing: linear")
-			}, 400)
+		// 	setTimeout(function(evt){
+		// 	cloud01.setAttribute('visible', true);
+		// 	cloud01.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.05 0.05 0.05; dur: 1500; easing: linear")
+		// 	}, 400)
 
-			setTimeout(function(evt){
-				cloud02.setAttribute('visible', true);
-				cloud02.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.05 0.03 0.05; dur: 1500; easing: linear")
-			}, 300)
+		// 	setTimeout(function(evt){
+		// 		cloud02.setAttribute('visible', true);
+		// 		cloud02.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.05 0.03 0.05; dur: 1500; easing: linear")
+		// 	}, 300)
 			
-			setTimeout(function(evt){
-				cloud03.setAttribute('visible', true);
-				cloud03.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.08 0.05 0.05; dur: 1500; easing: linear")
-			}, 100)
+		// 	setTimeout(function(evt){
+		// 		cloud03.setAttribute('visible', true);
+		// 		cloud03.setAttribute ('animation', "property: scale; from: 0 0 0; to: 0.08 0.05 0.05; dur: 1500; easing: linear")
+		// 	}, 100)
 
-			setTimeout(function(evt){
-				ar.setAttribute('visible', true);
-				ar.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
-			}, 200)
+		// 	setTimeout(function(evt){
+		// 		ar.setAttribute('visible', true);
+		// 		ar.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+		// 	}, 200)
 
-			setTimeout(function(evt){
-				vr.setAttribute('visible', true);
-				vr.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
-			}, 300)
+		// 	setTimeout(function(evt){
+		// 		vr.setAttribute('visible', true);
+		// 		vr.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+		// 	}, 300)
 
-			setTimeout(function(evt){
-				ddd.setAttribute('visible', true);
-				ddd.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
-			}, 400)
+		// 	setTimeout(function(evt){
+		// 		ddd.setAttribute('visible', true);
+		// 		ddd.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+		// 	}, 400)
 
-			setTimeout(function(evt){
-				games.setAttribute('visible', true);
-				games.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
-			}, 300)
+		// 	setTimeout(function(evt){
+		// 		games.setAttribute('visible', true);
+		// 		games.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+		// 	}, 300)
 
-			setTimeout(function(evt){
-				nutty.setAttribute('visible', true);
-				nutty.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
-			}, 100)
-		})
+		// 	setTimeout(function(evt){
+		// 		nutty.setAttribute('visible', true);
+		// 		nutty.setAttribute ('animation', "property: scale; from: 0 0 0; to: 1 1 1; dur: 1500; easing: linear")
+		// 	}, 100)
+		// })
 
 	</script>
 </body>
