--- a/arjs/index.html
+++ b/arjs/index.html
@@ -7,7 +7,7 @@
 <!-- <script src="./js/scene-logic.js"></script> -->
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs="trackingMethod: artoolkit; sourceType: webcam; debugUIEnabled: true;"
+	<a-scene embedded arjs="trackingMethod: artoolkit; sourceType: webcam; debugUIEnabled: false;"
 		renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" >
 		<!-- <a-scene embedded artoolkit='sourceType: webcam;' renderer='logarithmicDepthBuffer: true;'> -->
 		<a-assets>
