--- a/business-cards-ar/index.html
+++ b/business-cards-ar/index.html
@@ -13,11 +13,11 @@
 		renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false">
 		<!-- <a-scene embedded artoolkit='sourceType: webcam;' renderer='logarithmicDepthBuffer: true;'> -->
 		<a-assets>
-			<video id="tntc-video" src="./video/business-card.mp4"></video>
+			<video id="tntc-video" src="./video/business-card.webm"></video>
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker23.patt'>
-			<a-video id="vid" src="#tntc-video" width="2.5" height="1.7" position="0 0 0" rotation="-90 0 0"></a-video>
+			<a-video id="vid" src="#tntc-video" width="2" height="1.3" position="0 0 0" rotation="-90 0 0"></a-video>
 		</a-marker>
 
 		<a-entity camera="far:100000; near:0.01">
@@ -41,6 +41,7 @@
 			if (firstTime) {
 				hint.setAttribute('visible', false)
 				vid.play()
+				firstTime = false
 			}
 		})
 
