--- a/ar-demo/index.html
+++ b/ar-demo/index.html
@@ -13,7 +13,7 @@
 		renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false">
 		<!-- <a-scene embedded artoolkit='sourceType: webcam;' renderer='logarithmicDepthBuffer: true;'> -->
 		<a-assets>
-			<video id="tntc-video" src="./video/business-card.webm"></video>
+			<video id="tntc-video" src="./video/business-card.mp4"></video>
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker.patt'>
