--- a/ar-demo/index.html
+++ b/ar-demo/index.html
@@ -14,10 +14,12 @@
 		<!-- <a-scene embedded artoolkit='sourceType: webcam;' renderer='logarithmicDepthBuffer: true;'> -->
 		<a-assets>
 			<video id="tntc-video" src="./video/business-card.mp4"></video>
+			<img id="logo" src="images/ar.png">
 		</a-assets>
 
 		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker.patt'>
-			<a-video id="vid" src="#tntc-video" width="2" height="1.3" position="0 0 0" rotation="-90 0 0"></a-video>
+			<!-- <a-video id="vid" src="#tntc-video" width="2" height="1.3" position="0 0 0" rotation="-90 0 0"></a-video> -->
+			<a-image src="#logo" width="3" height="1.5" rotation="-90 0 0"></a-image>
 		</a-marker>
 
 		<a-entity camera="far:100000; near:0.01">
