--- a/ar-demo/index.html
+++ b/ar-demo/index.html
@@ -18,7 +18,7 @@
 			<!-- <img id="img3D" src="./images/3d.png" alt=""></img> -->
 		</a-assets>
 
-		<a-marker preset='custom' type='pattern' url='marker/pattern-Marker.patt'>
+		<a-marker preset='custom' type='pattern' url='marker/pattern-icona Ar.patt'>
 			<!-- <a-video id="vid" src="#tntc-video" width="2" height="1.3" position="0 0 0" rotation="-90 0 0"></a-video> -->
 			<!-- <a-image id="ar" src="#imgAR" position="0 1 0" rotation="-90 0 0" width="1" height="1" alphatest='val: 0.5' visible="true"></a-image>
 			<a-image id="vr" src="#imgVR" position="0 0.5 0" rotation="-90 0 0" width="1" height="1" alphatest='val: 0.5' visible="true"></a-image>
