--- a/phoenyx/index.html
+++ b/phoenyx/index.html
@@ -9,40 +9,18 @@
     <script src="Build/UnityLoader.js"></script>
     <script src="js/app.js"></script>
 
-    <style>
-      .center {
-        margin: 0;
-        position: absolute;
-        top: 90%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-		z-index: 10;
-      }
-	  
-	  .button {
-	    background-color: green;
-		text-decoration: none;
-		border-radius: 10px;
-		border: 2px solid #4CAF50;
-	  }
-      </style>
-
   </head>
 
   <body style="margin: 0px; overflow: hidden;">
-    <div class="center" id="center">
-        <!-- <button class="button" onclick="playVideo()">Play/Stop Video!</button> -->
-    </div>
     <a-scene embedded arjs vr-mode-ui="enabled: false" copycanvas>
       <div id="unityContainer" style="z-index: 2" ></div>
-	  
       <!-- <a-marker preset="hiro"> <a-box></a-box> </a-marker> -->
       <!-- <a-marker type="pattern" url="data/markers/pattern-arjs.patt"><a-box></a-box></a-marker> -->
       <!-- <a-marker type="pattern" url="data/markers/test.patt" markercontroller="name : hiro"></a-marker> -->
 
-			<a-marker type="pattern" url="data/markers\Bear.patt" markercontroller="name : Bear"></a-marker>
-			<a-marker type="pattern" url="data/markers\Deer.patt" markercontroller="name : Deer"></a-marker>
+			<a-marker type="pattern" url="data/markers\Hiro.patt" markercontroller="name : Hiro"></a-marker>
+			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
+			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
