--- a/businesscard/index.html
+++ b/businesscard/index.html
@@ -43,7 +43,8 @@
                 <a href="#" class="social-link"><img src="instagram.png" alt="Instagram Icon" class="icon"></a>
                 <a href="#" class="social-link"><img src="youtube.png" alt="Youtube Icon" class="icon"></a>
             </div>
-            <button class="add-to-address-book">Add me to your address book</button>
+            <button class="add-to-address-book" onclick="downloadVCard()">Add me to your address book</button>
         </div>
     </body>
+    <script src="script.js"></script>
 </html>
