--- a/businesscard/matteo/index.html
+++ b/businesscard/matteo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Card</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
     <body>
         <div class="business-card">
@@ -16,15 +16,15 @@
             </div>
             <div class="contact-info">
                 <a href="mailto:info@tntc.it" class="contact-link" >
-                    <img src="email.png" alt="Email Icon" class="icon">
+                    <img src="../email.png" alt="Email Icon" class="icon">
                     info@tntc.it
                 </a>
                 <a href="tel:+393496991261" class="contact-link">
-                    <img src="phone.png" alt="Phone Icon" class="icon">
+                    <img src="../phone.png" alt="Phone Icon" class="icon">
                     +393496991261
                 </a>
                 <a href="http://www.tntc.it" class="contact-link">
-                    <img src="site.png" alt="Website Icon" class="icon">
+                    <img src="../site.png" alt="Website Icon" class="icon">
                     www.tntc.it
                 </a>
                 <div class="contact-text">
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href="#" class="social-link"><img src="linkedin.png" alt="LinkedIn Icon" class="icon"></a>
-                <a href="#" class="social-link"><img src="instagram.png" alt="Instagram Icon" class="icon"></a>
-                <a href="#" class="social-link"><img src="youtube.png" alt="Youtube Icon" class="icon"></a>
+                <a href="#" class="social-link"><img src="../linkedin.png" alt="LinkedIn Icon" class="icon"></a>
+                <a href="#" class="social-link"><img src="../instagram.png" alt="Instagram Icon" class="icon"></a>
+                <a href="#" class="social-link"><img src="../youtube.png" alt="Youtube Icon" class="icon"></a>
             </div>
             <button class="add-to-address-book" onclick="downloadVCard()">Add me to your address book</button>
         </div>
