--- a/businesscard/matteo/index.html
+++ b/businesscard/matteo/index.html
@@ -23,7 +23,7 @@
                     <img src="../phone.png" alt="Phone Icon" class="icon">
                     +393496991261
                 </a>
-                <a href="http://www.tntc.it" class="contact-link">
+                <a target="_blank" href="https://toughnuttocrack.it/" class="contact-link">
                     <img src="../site.png" alt="Website Icon" class="icon">
                     www.tntc.it
                 </a>
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href="#" class="social-link"><img src="../linkedin.png" alt="LinkedIn Icon" class="icon"></a>
-                <a href="#" class="social-link"><img src="../instagram.png" alt="Instagram Icon" class="icon"></a>
-                <a href="#" class="social-link"><img src="../youtube.png" alt="Youtube Icon" class="icon"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/matteo-baraldi-51747b103/" class="social-link"><img src="../linkedin.png" alt="LinkedIn Icon" class="icon"></a>
+                <a target="_blank" href="https://www.instagram.com/tntcproject/" class="social-link"><img src="../instagram.png" alt="Instagram Icon" class="icon"></a>
+                <a target="_blank" href="https://www.youtube.com/@TNTCProject" class="social-link"><img src="../youtube.png" alt="Youtube Icon" class="icon"></a>
             </div>
             <button class="add-to-address-book" onclick="downloadVCard()">Add me to your address book</button>
         </div>
